@@ -1,5 +1,7 @@
 = HEAD
 
+* Add :static plugin, for more easily serving static files (jeremyevans)
+
 * Recognize Roda :root option in render and assets plugins (jeremyevans)
 
 * Make :layout=>false option in render plugin override previous layout template (jeremyevans)
